docs: split core properties and add connectivity and overlap section